# jesse-mcp

./: .SRCINFO  .gitignore  AGENTS.md  ANALYSIS_SUMMARY.txt  AUTHENTICATION_DISCOVERY.md  Dockerfile  FABRIC_INTEGRATION_COMPLETE.md  FABRIC_INTEGRATION_SUMMARY.md  FABRIC_MODULARIZATION_COMPLETE.md  FINAL_MODULARIZATION_SUMMARY.md  JESSE_API_CONFIGURATION.md  JESSE_BARE_METAL_INVESTIGATION.md  JESSE_SETUP.md  MANIFEST.in  PHASE1_STATUS.md  PHASE2_ROADMAP.md  PHASE4_PLAN.md  PHASE5_PLAN.md  PKGBUILD  PRD-PAPER.md  PRODUCTION_MODULARIZATION_COMPLETE.md  README.md  REFACTORING_ANALYSIS.md  REFACTORING_STRATEGY.md  REFACTORING_SUMMARY.md  SESSION_SUMMARY.md  TODO.txt  TOOL_EXTRACTION_REFERENCE.md  create_modular_jessegpt.sh  demo_trading_system.py  docker-compose.override.yml  jesse-mcp-wrapper.sh  jesse_integration.py  jesse_mcp_server.md  jessegpt.md  jessegpt_modular  jessegpt_modular.md  jessegpt_modular.sh  jessegpt_modular.sh.old  mcp_system_prompt.md  (+15 more)
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.github/workflows/: publish.yml
agents/: agent-a.md  agent-b.md  agent-c.md
config/: trading_system.json
docs/: AGENT_SYSTEM.md  AGENT_USAGE_EXAMPLES.md  COMPREHENSIVE_TRADING_SYSTEM_DESIGN.md  CONVERSATIONAL_PIPELINE_SPEC.md  FASTMCP_REFACTORING_PRD.md  IMPLEMENTATION_PLAN.md  JESSE_API_CONFIGURATION.md  JESSE_SETUP.md  MCPROXY_INTEGRATION_ISSUES.md  PHASE3_COMPLETE.md  PHASE3_PLAN.md  PRODUCTION_DEPLOYMENT.md  PROJECT_FINAL_REPORT.md  PROJECT_STATUS.md  SESSION_SUMMARY.md  USING_WITH_LLMS.md  jesse-rest-api.md
docs/archive/: IMPLEMENTATION_PLAN.md  PHASE2_COMPLETE.md  PHASE2_ROADMAP.md  PRD_v1.0.0.md  PROJECT_FINAL_REPORT.md  PROJECT_SUMMARY.md  README.md
jesse_mcp/: __init__.py  __main__.py  agent_tools.py  alerts.py  cli.py  logs.py  monitoring.py  news_engine.py  optimizer.py  orchestrator.py  pairs_analyzer.py  risk_analyzer.py  server.py  testing_framework.py  tool_interface.py
jesse_mcp/agents/: __init__.py  backtester.py  base.py  enhanced_risk.py  live_trader.py  risk_manager.py  strategy_optimizer.py
jesse_mcp/config/: __init__.py
jesse_mcp/core/: __init__.py  cache.py  candle_cache.py  integrations.py  jesse_rest_client.py  job_manager.py  live_config.py  mock.py  rate_limiter.py  strategy_builder.py  strategy_validator.py  websocket_stream.py
jesse_mcp/phase3/: __init__.py  optimizer.py
jesse_mcp/phase4/: __init__.py  risk_analyzer.py
jesse_mcp/phase5/: __init__.py  pairs_analyzer.py
jesse_mcp/tools/: __init__.py  _utils.py  backtesting.py  jesse_trade.py  live.py  optimization.py  pairs.py  risk.py  (+1 more)
scripts/: parallel-development.sh  push-deploy.sh  run-monitor.sh  start-dev-server.sh  stop-dev-server.sh
shared-state/: agent-a-deliverables.md  agent-a-state.json  agent-b-backtest-analysis-report.md  agent-b-state.json  agent-c-execution-summary.md  agent-c-risk-analysis-report.md  agent-c-state.json  backtest_result.json
strategies/: EnhancedSMA.py  QUICK_START.md  agent-a-strategy-dev.md  agent-b-backtest-analysis.md  agent-c-risk-management.md  sma_crossover_strategy.py
system/: agent-a.service  agent-b.service  agent-c.service
tests/: test_backtest_timeout.py  test_e2e.py  test_job_manager.py  test_live_trading.py  test_optimizer.py  test_pairs_analyzer.py  test_phase3.py  test_phase4.py  test_phase5.py  test_rest_client.py  test_risk_analyzer.py  test_server.py  test_strategy_builder.py
(+25 files in other folders)
