[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jesse-mcp"
version = "1.0.0"
description = "MCP server for quantitative trading analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jesse Team"}]
keywords = ["trading", "backtesting", "optimization", "mcp"]

dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.3.0",
    "jedi>=0.19.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "typing-extensions",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
optuna = [
    "optuna>=3.0.0",
]

[project.scripts]
jesse-mcp = "jesse_mcp.cli:main"

[tool.setuptools]
packages = ["jesse_mcp"]

[tool.setuptools.package-data]
jesse_mcp = ["py.typed"]