[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jesse-mcp"
version = "1.2.0"
description = "MCP server for Jesse algorithmic trading framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Bernardo Kuri", email = "pypi.org+jesse-mcp@bkuri.com"}]
keywords = [
    "trading",
    "backtesting",
    "optimization",
    "mcp",
    "jesse",
    "algorithmic-trading",
    "quantitative-finance",
    "risk-analysis",
    "pairs-trading",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.3.0",
    "jedi>=0.19.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "typing-extensions",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "websockets>=12.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
optuna = [
    "optuna>=3.0.0",
]
redis = [
    "redis>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/bkuri/jesse-mcp"
Documentation = "https://github.com/bkuri/jesse-mcp#readme"
Repository = "https://github.com/bkuri/jesse-mcp.git"
Issues = "https://github.com/bkuri/jesse-mcp/issues"
Changelog = "https://github.com/bkuri/jesse-mcp/releases"

[project.scripts]
jesse-mcp = "jesse_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["jesse_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/jesse_mcp",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
